# lavaplayer

./: .gitattributes  CHANGELOG.md  FAQ.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-natives.yml  build.yml
common/: build.gradle.kts
common/src/main/java/com/sedmelluq/lava/common/natives/: NativeLibraryLoader.java  NativeLibraryProperties.java  SystemNativeLibraryProperties.java
common/src/main/java/com/sedmelluq/lava/common/natives/architecture/: DefaultArchitectureTypes.java  DefaultOperatingSystemTypes.java  SystemType.java
common/src/test/java/com/sedmelluq/lava/common/natives/: NativeLibraryLoaderTest.java
common/src/test/java/com/sedmelluq/lava/common/natives/architecture/: DefaultArchitectureTypesTest.java  DefaultOperatingSystemTypesTest.java
extensions/format-xm/: build.gradle.kts
main/: build.gradle.kts
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/: MediaContainerDetection.java  MediaContainerProbe.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/adts/: AdtsContainerProbe.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/flac/: FlacContainerProbe.java  FlacFileLoader.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/mp3/: Mp3ContainerProbe.java  Mp3FrameReader.java  Mp3TrackProvider.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/mpegts/: MpegAdtsContainerProbe.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/source/: AudioSourceManagers.java  ProbingAudioSourceManager.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/source/http/: HttpAudioHeaders.java  HttpAudioReference.java  HttpAudioSourceManager.java  HttpAudioStream.java  HttpAudioTrack.java
main/src/test/java/com/sedmelluq/discord/lavaplayer/container/: MediaContainerDetectionTest.java
main/src/test/java/com/sedmelluq/discord/lavaplayer/container/mp3/: Mp3FrameReaderTest.java
main/src/test/java/com/sedmelluq/discord/lavaplayer/source/http/: HttpAudioSourceManagerTest.java
main/src/test/java/com/sedmelluq/discord/lavaplayer/tools/io/: ByteArraySeekableInputStream.java
natives/: build.gradle.kts  versions.properties
natives/cmake/: toolchain-linux-musl-x86-64.cmake
natives/connector/: CMakeLists.txt  connector.h  fdk-aac.c  mpg123.c  opus.c  samplerate.c  vorbis.c
natives/connector/linux/: statistics.c
natives/connector/win/: statistics.c
natives/fdk-aac/: CMakeLists.txt
natives/scripts/: build-linux-deps.sh
scripts/: check_mp3_lavaplayer_scan.py
